# myclic-agenda

./: .gitignore  CALDAV_INTEGRATION.md  docker-compose.yml
.github/workflows/: ci.yml  workflow.yml
backend/: .dockerignore  Dockerfile  db.sqlite3  entrypoint.sh  performance_comparison.py  pyproject.toml  requirements.txt  test_baikal_api.py  test_baikal_mysql.py  test_caldav_crud.py  test_caldav_service.py  test_quick_sync.py  test_sync_performance.py  wait_for_db.py
backend/api/: admin.py  baikal_db_service.py  baikal_models.py  baikal_serializers.py  baikal_views.py  baikal_views_caldav_only.py  caldav_service.py  middleware.py  models.py  myclic_model.py  serializers.py  urls.py  views.py
backend/api/management/: __init__.py
backend/api/management/commands/: sync_baikal_users.py
backend/api/migrations/: 0001_initial.py  0002_remove_calendarsource_caldav_config_and_more.py  0002_task_caldav_etag_task_caldav_uid_task_last_synced_and_more.py  0003_add_baikal_calendar_preference.py  0003_baikalcalendar_baikalcalendarinstance_and_more.py  0003_calendarsource_task_calendar_source.py  0004_calendarsource_shared_with.py  0004_remove_calendarsource_shared_with_and_more.py  0005_remove_calendarsource_shared_with.py  0006_calendarshare_calendarsource_shared_with.py  0007_remove_caldavconfig_caldav_url.py
backend/config/: db_router.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Calendar.tsx  ConfirmDialog.tsx  EventContextMenu.tsx  QuickEventModal.tsx  TaskModal.tsx  (+1 more)
(+11 files in other folders)
